--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			                <a class="nav-link" href="#">Home</a>
 			            </li>
 			            <li class="nav-item">
-			                <a class="nav-link" href="#">About</a>
+			                <a class="nav-link mr-md-0" href="#">About</a>
 			            </li>
 			        </ul>
 			    </div>
@@ -47,7 +47,7 @@
 				<div class="collapse navbar-collapse w-100 order-2 order-md-0" id="navbarNav">
 			        <ul class="navbar-nav custom_nav mr-md-auto">
 			            <li class="nav-item">
-			                <a class="nav-link" href="#">Service</a>
+			                <a class="nav-link ml-md-0" href="#">Service</a>
 			            </li>
 			            <li class="nav-item">
 			                <a class="nav-link" href="#">Contact</a>
